opam-version: "2.0"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://fog05.io"
bug-reports:  "https://github.com/eclipse-fog05/api-ocaml/issues/"
dev-repo:     "git+https://github.com/eclipse-fog05/api-ocaml.git"

build: [
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"  {= "1.11.4"}
  "fos-sdk" {= "0.1"}
  "apero-core" {= "0.4.6"}
]


synopsis : "Eclipse fog05 FIM API"
description: """
Eclipse fog05 FIM API is a collection of OCaml libraries used to interact
with Eclipse fog05 FIM"""