opam-version: "1.2"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://fog05.io"
bug-reports:  "https://github.com/eclipse-fog05/api-ocaml/issues/"
dev-repo:     "https://github.com/eclipse-fog05/api-ocaml.git"

build: [
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "fos-sdk"
  "apero-core"
]


synopsis : "Eclipse fog05 FIM API"
description: """
Eclipse fog05 FIM API is a collection of OCaml libraries used to interact
with Eclipse fog05 FIM"""